--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=pepito
 spring.datasource.password=dev
-spring.datasource.driver-class-name=org.h2.driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.initialization-mode=always
 
 spring.jpa.show-sql=true
